<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/bg">

    <RelativeLayout
        android:layout_width ="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity ="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >

        <TextView android:id="@+id/Welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Pay School Fees"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle ="bold"

            android:textColor="#ffffff"/>




        <!--  Email Label -->

        <TextView
            style="@style/label"
            android:text="@string/username"/>

        <EditText
            style="@style/tbox"

            android:hint="@string/username"
            android:id ="@+id/matNo"
            android:singleLine="true"/>

        <TextView
            style="@style/label"
            android:text="@string/Email"/>

        <EditText
            style="@style/tbox"

            android:hint="@string/Email"
            android:id ="@+id/Email"
            android:singleLine="true"/>


        <TextView
            style="@style/label"
            android:text="@string/cardName"/>

        <EditText
            style="@style/tbox"

            android:hint="@string/cardName"
            android:id ="@+id/cardName"
            android:singleLine="true"/>


        <TextView
            style="@style/label"
            android:text="@string/cardNum"/>

        <EditText
            style="@style/tbox"

            android:hint="@string/cardNum"
            android:id ="@+id/atmNumber"
            android:singleLine="true"/>

        <TextView
            style="@style/label"
            android:text="@string/cardPin"/>


        <EditText
            style="@style/tbox"

            android:hint="@string/cardPin"
            android:id ="@+id/atmPin"
            android:singleLine="true"/>



        <Button android:id="@+id/pay"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="#F00"
            android:textColor="#ffffff"
            android:text="@string/pay"
            android:layout_gravity="center"
            />


    </LinearLayout>
    </RelativeLayout>

</ScrollView>
